[package]
name = "actix-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mongodb = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
tracing-actix-web = "0.5"
tracing-appender = "0.2"
tracing-futures = "0.2"
tracing-subscriber = "0.3.11"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
rand = "0.8"
