[package]
name = "actix-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
rand = "0.8"
